[package]
name = "coati"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types         = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "4714bdc1e8ffec625f5ea0c07660846d8a1bd1e8", default-features = true }
gw-rpc-client    = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "4714bdc1e8ffec625f5ea0c07660846d8a1bd1e8" }
gw-config        = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "4714bdc1e8ffec625f5ea0c07660846d8a1bd1e8" }
gw-jsonrpc-types = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "4714bdc1e8ffec625f5ea0c07660846d8a1bd1e8" }
ckb-types = "0.104.0"

thiserror = "=1.0.32"
sparse-merkle-tree = "=0.5.3"
anyhow = "1.0"
tokio = { version = "1.15", features = ["full"] }
toml = "0.5"
